test/fixtures/error/pages/index.vue
<template>
  <div>
    <h1>Error Loop incoming page</h1>
    <nuxt-link to="/error-square">
      Error during error
    </nuxt-link>
    <nuxt-link to="/about">
      About
    </nuxt-link>
    <nuxt-link to="/info">
      Info (with error)
    </nuxt-link>
  </div>
</template>
